# motorsinnombredecidido

./: .gitignore  Animation_8cpp.html  Animation_8h.html  Animation_8h.js  Animation_8h_source.html  Animator_8cpp.html  Animator_8h.html  Animator_8h.js  Animator_8h_source.html  AssetManager_8cpp.html  AssetManager_8h.html  AssetManager_8h.js  AssetManager_8h_source.html  AudioClipData_8cpp.html  AudioClipData_8cpp.js  AudioClipData_8h.html  AudioClipData_8h.js  AudioClipData_8h_source.html  AudioClipKey_8h.html  AudioClipKey_8h.js  AudioClipKey_8h_source.html  AudioClip_8cpp.html  AudioClip_8h.html  AudioClip_8h.js  AudioClip_8h_source.html  AudioManager_8cpp.html  AudioManager_8h.html  AudioManager_8h.js  AudioManager_8h_source.html  AudioMixerData_8cpp.html  AudioMixerData_8h.html  AudioMixerData_8h.js  AudioMixerData_8h_source.html  AudioMixer_8cpp.html  AudioMixer_8h.html  AudioMixer_8h.js  AudioMixer_8h_source.html  AudioSource_8cpp.html  AudioSource_8h.html  AudioSource_8h.js  (+442 more)
Apendices/: appendixA.tex
Capitulos/: ConclusionesTrabajoFuturo.tex  ConclusionsFutureWork.tex  ContribucionesPersonales.tex  DesarrolloProyecto.tex  EAJuegosRol.tex  EAVideojuegosRol.tex  Editor.tex  EstadoDeLaCuestion.tex  EvaluacionAnalisis.tex  EvaluationAnalysis.tex  Introduccion.tex  Introduction.tex  Motor.tex  PlanteamientoProyecto.tex  TrabajoFuturo.tex
Cascaras/: abstract.tex  agradecimientos.tex  bibliografia.tex  cover.tex  dedicatoria.tex  resumen.tex
TeXiS/: TeXiS.bst  TeXiS.sty  TeXiS_acron.tex  TeXiS_cover.tex  TeXiS_en.bst  TeXiS_pream.tex  TeXiS_toc.tex
projects/APK/: build.gradle
projects/APK/app/: CMakeLists.txt  build.gradle
projects/APK/app/src/main/: AndroidManifest.xml
projects/DearImGui/: CMakeLists.txt
projects/Editor/: CMakeLists.txt
projects/Engine/: CMakeLists.txt
projects/Executable/: CMakeLists.txt
projects/lua/: CMakeLists.txt
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  concepts_0.js  defines_0.js  defines_1.js  (+55 more)
src/APK/: main.cpp
src/Editor/: Editor.cpp  Editor.h  main.cpp
src/Editor/common/: Editor.cpp  Editor.h  EditorError.cpp  EditorError.h  Project.cpp  Project.h
src/Editor/io/: InputManager.cpp  InputManager.h  LocalizationManager.cpp  LocalizationManager.h  LuaManager.cpp  LuaManager.h  PreferencesManager.cpp  PreferencesManager.h  ProjectManager.cpp  ProjectManager.h  ResourceManager.cpp  ResourceManager.h
src/Editor/render/: ModalWindow.cpp  ModalWindow.h  RenderManager.cpp  RenderManager.h  RenderObject.h  Subwindow.cpp  Subwindow.h  Window.cpp  Window.h  WindowItem.cpp  WindowItem.h  WindowStack.cpp  WindowStack.h
src/Editor/render/Modals/: CreateProjectModal.cpp  CreateProjectModal.h  DeleteProjectModal.cpp  RenameProjectModal.cpp  SettingsModal.cpp  SettingsModal.h
src/Editor/render/Subwindows/: WelcomeWindowLeftPanel.cpp  WelcomeWindowLeftPanel.h  WelcomeWindowProjectManagementButtons.cpp  WelcomeWindowProjectManagementButtons.h  WelcomeWindowRightPanel.cpp  WelcomeWindowRightPanel.h
src/Editor/render/UIElement/: Window.cpp  Window.h  WindowComponent.cpp  WindowComponent.h
src/Editor/render/WindowItems/: AssetsViewer.cpp  AssetsViewer.h  EventEditor.cpp  EventEditor.h  GeneralSettings.cpp  GeneralSettings.h  MapConnections.cpp  MapConnections.h  MapEditor.cpp  MapEditor.h  PlayerSettings.cpp  PlayerSettings.h  SpriteAnimViewer.cpp  SpriteAnimViewer.h  SpriteEditor.cpp  SpriteEditor.h
src/Editor/resources/: Animation.cpp  Animation.h  EditorResource.h  Event.cpp  Event.h  Map.cpp  Map.h  Object.cpp  Object.h  Sprite.cpp  Sprite.h  Tile.h  Tileset.cpp  Tileset.h
src/Editor/utils/: IconsFontAwesome6.h  IteratableStack.h  SearchableList.h
src/Engine/: AssetManager.cpp  AssetManager.h  LuaManager.cpp  LuaManager.h  MainLoop.cpp  MainLoop.h  RPGError.h  RenderManager.cpp  RenderManager.h
src/Engine/Audio/: AudioClip.cpp  AudioClip.h  AudioClipData.cpp  AudioClipData.h  AudioClipKey.h  AudioManager.cpp  AudioManager.h  AudioMixer.cpp  AudioMixer.h  AudioMixerData.cpp  AudioMixerData.h  AudioSource.cpp  AudioSource.h
src/Engine/Collisions/: Collider.cpp  Collider.h  CollisionManager.cpp  CollisionManager.h
src/Engine/Core/: Component.cpp  Component.h  ComponentData.cpp  ComponentData.h  ComponentFactory.cpp  ComponentFactory.h  ComponentTemplate.h  Entity.cpp  Entity.h  EntityBlueprint.cpp  EntityBlueprint.h  Game.cpp  Game.h  PrefabBlueprint.cpp  PrefabBlueprint.h  Scene.cpp  Scene.h  SceneAPI.cpp  SceneAPI.h  SceneBlueprint.cpp  SceneBlueprint.h  SceneManager.cpp  SceneManager.h
src/Engine/Gameplay/: LocalVariables.cpp  LocalVariables.h
src/Engine/Input/: Button.cpp  Button.h  InputManager.cpp  InputManager.h
src/Engine/Load/: AssetManager.cpp  AssetManager.h  BaseResourceHandler.cpp  BaseResourceHandler.h  LuaManager.cpp  LuaReader.cpp  LuaReader.h  Resource.cpp  Resource.h  ResourceHandler.h  ResourceManager.cpp  ResourceManager.h  ResourceMemoryManager.cpp  ResourceMemoryManager.h
src/Engine/Main/: Main.cpp  Main.h  MainLoop.cpp
src/Engine/Render/: Animation.cpp  Animation.h  Animator.cpp  Animator.h  Camera.cpp  Camera.h  Color.h  Font.cpp  Font.h  Rectangle.cpp  Rectangle.h  RenderComponent.cpp  RenderComponent.h  RenderManager.cpp  RenderManager.h  Sprite.cpp  Sprite.h  SpriteRenderer.cpp  SpriteRenderer.h  Text.cpp  Text.h  TextTexture.cpp  TextTexture.h  Texture.cpp  Texture.h  TextureLoader.cpp  TextureLoader.h  Transform.cpp  Transform.h
src/Engine/Utils/: Error.cpp  Error.h  RPGError.cpp  RPGError.h  Random.cpp  Random.h  Rect.h  Time.cpp  Time.h  TimeManager.cpp  TimeManager.h  Vector2.cpp  Vector2.h  string_literal.h
src/Executable/: main.cpp
src/lua/: lua.hpp
(+136 files in other folders)
